// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDropdownItem customize 1`] = `
<div>
  <div
    class="dropdown-item bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CDropdownItem component 1`] = `
<div>
  <a
    class="dropdown-item"
  >
    Test
  </a>
</div>
`;
